# breakcore-viz

./: CLAUDE.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  PROJECT_STATUS.md  README.md  SESSION-2026-03-17.md  TEST_GUIDE.md  build-wasm.sh  deploy.sh  docker-compose.yml
assets/: config.toml
assets/shaders/: bloom.wgsl  core.wgsl  feedback.wgsl
src/: audio.rs  effects.rs  main.rs  particles.rs  renderer.rs  wasm_app.rs
static/: index.html
web/: index.html
web/pkg/: .gitkeep
