[package]
name = "breakcore-viz"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_sprite",
    "x11",
    "multi_threaded"
] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glam = { version = "0.27", features = ["fast-math"] }
toml = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "AudioContext",
    "AnalyserNode",
    "MediaElementAudioSourceNode",
    "HtmlMediaElement",
    "CanvasRenderingContext2d",
    "ImageData"
] }
js-sys = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
